crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@350.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE prt2_adv_default PARTITION OF prt2_adv DEFAULT;
---
CreateStmt@0..60
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..29
    Ident@13..29 "prt2_adv_default"
  Whitespace@29..30 " "
  Partition@30..39 "PARTITION"
  Whitespace@39..40 " "
  Of@40..42 "OF"
  Whitespace@42..43 " "
  RangeVar@43..51
    Ident@43..51 "prt2_adv"
  Whitespace@51..52 " "
  PartitionBoundSpec@52..59
    Default@52..59 "DEFAULT"
  Ascii59@59..60 ";"

